src/parser/snapshots/libsrc__parser__parser_snap_tests__old_test_test_effect.snap
---
source: src/parser/parser_snap_tests.rs
expression: "format!(\"{:#?}\", t.unwrap())"
---
Module(
    [
        EffectDef(
            EffectDef(
                Ident(
                    "VM",
                    None,
                ),
                [
                    Ident(
                        "async",
                        None,
                    ),
                    Ident(
                        "throws",
                        None,
                    ),
                    Ident(
                        "execs",
                        None,
                    ),
                ],
                Block(
                    [
                        Prototype {
                            name: Ident(
                                "catch",
                                None,
                            ),
                            args: [],
                            ret: None,
                            effects: [],
                        },
                        Prototype {
                            name: Ident(
                                "await",
                                Some(
                                    [
                                        Ident(
                                            "T",
                                            None,
                                        ),
                                    ],
                                ),
                            ),
                            args: [
                                Field(
                                    Field(
                                        Ident(
                                            "f",
                                            None,
                                        ),
                                        Ident(
                                            "Future",
                                            Some(
                                                [
                                                    Ident(
                                                        "T",
                                                        None,
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                            ret: Some(
                                Ident(
                                    "T",
                                    None,
                                ),
                            ),
                            effects: [],
                        },
                        Prototype {
                            name: Ident(
                                "exec",
                                None,
                            ),
                            args: [
                                Field(
                                    Field(
                                        Ident(
                                            "arg0",
                                            None,
                                        ),
                                        Ident(
                                            "string",
                                            None,
                                        ),
                                    ),
                                ),
                                Field(
                                    Field(
                                        Ident(
                                            "args",
                                            None,
                                        ),
                                        Ident(
                                            "stringvec",
                                            None,
                                        ),
                                    ),
                                ),
                            ],
                            ret: None,
                            effects: [],
                        },
                    ],
                ),
            ),
        ),
    ],
)
