src/parser/snapshots/libsrc__parser__parser_snap_tests__old_test_test_enum_parser.snap
---
source: src/parser/parser_snap_tests.rs
expression: "format!(\"{:#?}\", t.unwrap())"
---
Module(
    [
        UseDef(
            UseDef(
                [
                    Ident(
                        "crosmvm",
                        None,
                    ),
                ],
                Ident(
                    "std",
                    None,
                ),
            ),
        ),
        EffectDef(
            EffectDef(
                Ident(
                    "Vm",
                    None,
                ),
                [
                    Ident(
                        "async",
                        None,
                    ),
                    Ident(
                        "throws",
                        None,
                    ),
                    Ident(
                        "execs",
                        None,
                    ),
                ],
                Block(
                    [
                        Prototype {
                            name: Ident(
                                "catch",
                                None,
                            ),
                            args: [],
                            ret: None,
                            effects: [
                                Ident(
                                    "throws",
                                    None,
                                ),
                            ],
                        },
                        Prototype {
                            name: Ident(
                                "await",
                                Some(
                                    [
                                        Ident(
                                            "T",
                                            None,
                                        ),
                                    ],
                                ),
                            ),
                            args: [
                                Field(
                                    Field(
                                        Ident(
                                            "f",
                                            None,
                                        ),
                                        Ident(
                                            "Future",
                                            Some(
                                                [
                                                    Ident(
                                                        "T",
                                                        None,
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ),
                                ),
                            ],
                            ret: Some(
                                Ident(
                                    "T",
                                    None,
                                ),
                            ),
                            effects: [
                                Ident(
                                    "async",
                                    None,
                                ),
                                Ident(
                                    "throws",
                                    None,
                                ),
                            ],
                        },
                        Prototype {
                            name: Ident(
                                "exec",
                                None,
                            ),
                            args: [
                                Field(
                                    Field(
                                        Ident(
                                            "arg0",
                                            None,
                                        ),
                                        Ident(
                                            "string",
                                            None,
                                        ),
                                    ),
                                ),
                                Field(
                                    Field(
                                        Ident(
                                            "args",
                                            None,
                                        ),
                                        Ident(
                                            "stringvec",
                                            None,
                                        ),
                                    ),
                                ),
                            ],
                            ret: Some(
                                Ident(
                                    "i32",
                                    None,
                                ),
                            ),
                            effects: [
                                Ident(
                                    "Vm",
                                    None,
                                ),
                            ],
                        },
                    ],
                ),
            ),
        ),
        StructDef(
            StructDef(
                Ident(
                    "coopvm",
                    None,
                ),
                Block(
                    [],
                ),
            ),
        ),
        ImplDef(
            ImplDef(
                Ident(
                    "Vm",
                    None,
                ),
                Some(
                    Ident(
                        "coopvm",
                        None,
                    ),
                ),
                Block(
                    [
                        FnDef(
                            FnDef(
                                Prototype {
                                    name: Ident(
                                        "catch",
                                        None,
                                    ),
                                    args: [
                                        Reciever,
                                    ],
                                    ret: None,
                                    effects: [
                                        Ident(
                                            "throws",
                                            None,
                                        ),
                                    ],
                                },
                                Block(
                                    [],
                                ),
                                [],
                            ),
                        ),
                        FnDef(
                            FnDef(
                                Prototype {
                                    name: Ident(
                                        "await",
                                        Some(
                                            [
                                                Ident(
                                                    "T",
                                                    None,
                                                ),
                                            ],
                                        ),
                                    ),
                                    args: [
                                        Field(
                                            Field(
                                                Ident(
                                                    "f",
                                                    None,
                                                ),
                                                Ident(
                                                    "Future",
                                                    Some(
                                                        [
                                                            Ident(
                                                                "T",
                                                                None,
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    ret: Some(
                                        Ident(
                                            "T",
                                            None,
                                        ),
                                    ),
                                    effects: [
                                        Ident(
                                            "async",
                                            None,
                                        ),
                                        Ident(
                                            "trhows",
                                            None,
                                        ),
                                    ],
                                },
                                Block(
                                    [
                                        FnCall(
                                            FnCall(
                                                Ident(
                                                    "yield",
                                                    None,
                                                ),
                                                [],
                                            ),
                                        ),
                                    ],
                                ),
                                [],
                            ),
                        ),
                        FnDef(
                            FnDef(
                                Prototype {
                                    name: Ident(
                                        "exec",
                                        None,
                                    ),
                                    args: [
                                        Reciever,
                                        Field(
                                            Field(
                                                Ident(
                                                    "arg0",
                                                    None,
                                                ),
                                                Ident(
                                                    "string",
                                                    None,
                                                ),
                                            ),
                                        ),
                                        Field(
                                            Field(
                                                Ident(
                                                    "args",
                                                    None,
                                                ),
                                                Ident(
                                                    "vec",
                                                    Some(
                                                        [
                                                            Ident(
                                                                "string",
                                                                None,
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                    ret: Some(
                                        Ident(
                                            "i32",
                                            None,
                                        ),
                                    ),
                                    effects: [
                                        Ident(
                                            "Vm",
                                            None,
                                        ),
                                    ],
                                },
                                Block(
                                    [
                                        Branch(
                                            Branch(
                                                FnCall(
                                                    FnCall(
                                                        Ident(
                                                            "self.exec",
                                                            None,
                                                        ),
                                                        [
                                                            Ident(
                                                                Ident(
                                                                    "arg0",
                                                                    None,
                                                                ),
                                                            ),
                                                            Ident(
                                                                Ident(
                                                                    "args",
                                                                    None,
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                [
                                                    (
                                                        Bool(
                                                            true,
                                                        ),
                                                        Block(
                                                            [
                                                                FnCall(
                                                                    FnCall(
                                                                        Ident(
                                                                            "raise",
                                                                            None,
                                                                        ),
                                                                        [],
                                                                    ),
                                                                ),
                                                            ],
                                                        ),
                                                    ),
                                                ],
                                            ),
                                        ),
                                    ],
                                ),
                                [],
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
)
