src/parser/snapshots/libsrc__parser__parser_snap_tests__old_test_test_struct_parser.snap
---
source: src/parser/parser_snap_tests.rs
expression: "format!(\"{:#?}\", t.unwrap())"
---
Module(
    [
        StructDef(
            StructDef(
                Ident(
                    "VM",
                    None,
                ),
                Block(
                    [
                        Field(
                            Ident(
                                "a",
                                None,
                            ),
                            Ident(
                                "string",
                                None,
                            ),
                        ),
                        Field(
                            Ident(
                                "b",
                                None,
                            ),
                            Ident(
                                "string",
                                None,
                            ),
                        ),
                    ],
                ),
            ),
        ),
    ],
)
